Bug 104144 - FILESAVE: PPT Dashed border lost after RT
Summary: FILESAVE: PPT Dashed border lost after RT
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.2.3.3 release
Hardware: All All
: medium normal
Assignee: Stephan Bergmann
URL:
Whiteboard: target:5.4.0 target:5.3.0.1 target:5.2.4
Keywords: bibisected, bisected, regression
: 104039 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-11-24 12:06 UTC by Xisco Faulí
Modified: 2017-02-10 21:49 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
sample (19.00 KB, application/vnd.ms-powerpoint)
2016-11-24 12:06 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2016-11-24 12:06:51 UTC
Created attachment 128989 [details]
sample

Steps to reproduce:
1. Open attached document
2. Save it as a new .PPT
3. Open the new .PPT file

Observed behaviour: dashed border are gone

Reproduced in

Version: 5.3.0.0.alpha1+
Build ID: 4ebf1ea7cb66fc3e6b94cd38dd233aaead69f3d5
CPU Threads: 4; OS Version: Linux 4.8; UI Render: default; VCL: gtk3; Layout
Engine: old; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

but not in

Version: 5.0.0.0.alpha1+
Build ID: 0db96caf0fcce09b87621c11b584a6d81cc7df86
Locale: ca-ES (ca_ES.UTF-8)
Comment 1 m_a_riosv 2016-11-24 23:10:27 UTC
Reproducible.
Version: 5.2.3.3 (x64)
Build ID: d54a8868f08a7b39642414cf2c8ef2f228f780cf
CPU Threads: 4; OS Version: Windows 6.19; UI Render: default; 
Locale: es-ES (es_ES); Calc: group

Not reproducible.
Versión: 5.1.6.1 (x64)
Id. de compilación: f3e25ec0581f5012f54d8810dcddd5824f4ee374
Subprocesos de CPU: 1; Versión de SO: Windows 6.19; Renderizado de IU: predeterminado; 
Configuración regional: es-ES (es_ES); Calc: CL

Doesn't happend saving as pptx.
Comment 2 raal 2016-11-26 18:25:12 UTC
This seems to have begun at the below commit.
Adding Cc: to Stephan Bergmann; Could you possibly take a look at this one? Thanks

author	Stephan Bergmann <sbergman@redhat.com>	2016-05-10 15:52:35 (GMT)
committer	Stephan Bergmann <sbergman@redhat.com>	2016-05-10 15:52:35 (GMT)
commit 5ffd2c1595d1f67f5e4b14e48188a1f37f1956b5 (patch)
tree 40930b0a0b35b1a67cffdbaefefd30fc38fad5cf
parent ca6c108caaeca5c8176164fcad70ae7a77865892 (diff)
Presumably missing break in switch
 6158dc3b35af692504c2f49e945df8059eebf092 is the first bad commit
commit 6158dc3b35af692504c2f49e945df8059eebf092
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Sat May 14 22:12:17 2016 -0700

    source 5ffd2c1595d1f67f5e4b14e48188a1f37f1956b5
 git bisect log
# bad: [6380ca07b05f68dedcaa379302cfe1fa478571c4] source 60b74fe1775e647545d2da1fcc58a4c63ec18aa5
# good: [1f670510f08cb800cbae2a1dd6ea70d3542e4721] source 49c2b9808df8a6b197dec666dfc0cda6321a4306
git bisect start 'origin/master' 'oldest'
# good: [38f37b8ec1a2d199bb957cfd2581df7d1b273b74] source c0da1080b61a1d51654fc34fdaeba373226065ff
git bisect good 38f37b8ec1a2d199bb957cfd2581df7d1b273b74
# good: [11ae494d8c566f23e0ef84ba0cc25fb1388b67f7] source 470cfa9860232ab70e017e6084d80f80d469555c
git bisect good 11ae494d8c566f23e0ef84ba0cc25fb1388b67f7
# good: [ee4cfd75d2452b8c416b4ec27358f7a905d6f5cf] source aa544a002e534a313ad9dd365e80f052789d9963
git bisect good ee4cfd75d2452b8c416b4ec27358f7a905d6f5cf
# bad: [d4576510090f82fe28ee9ee0a9e299fe2541f06c] source 7e55fbab6348c2a844fc7ecca8de61416db8fdae
git bisect bad d4576510090f82fe28ee9ee0a9e299fe2541f06c
# bad: [ccabeba586b621195f3d9342ec2d6391f1d28a82] source e141017c686c4fb1dbd3533dffff396f62f103f7
git bisect bad ccabeba586b621195f3d9342ec2d6391f1d28a82
# bad: [21cd19d9dfd9cecd3c7284201896b6310b88eedd] source 0f4ac20e0456b32995f7a3aff4e46b59e64704a6
git bisect bad 21cd19d9dfd9cecd3c7284201896b6310b88eedd
# bad: [60becdeae2c864fde05c98859dc0eb75f975b1df] source 36028d9010b697ac97da2acc0fa21610ea8731b0
git bisect bad 60becdeae2c864fde05c98859dc0eb75f975b1df
# good: [bfb802b09c15f8c054b2e1ef48c8d060cb5f9c7b] source ad5323b2aae7a69e58629717fb71618ffb727e8d
git bisect good bfb802b09c15f8c054b2e1ef48c8d060cb5f9c7b
# bad: [32262d627096814a62a9261971440842e662284b] source 4bf7614503292fe69d3e5835621c1cdcaa4536cb
git bisect bad 32262d627096814a62a9261971440842e662284b
# good: [02296c76b9649f748ef624ef222001798a1bde5d] source 6bf020fb7ef0a13188ece51d41dd101141b42b41
git bisect good 02296c76b9649f748ef624ef222001798a1bde5d
# bad: [6158dc3b35af692504c2f49e945df8059eebf092] source 5ffd2c1595d1f67f5e4b14e48188a1f37f1956b5
git bisect bad 6158dc3b35af692504c2f49e945df8059eebf092
# good: [eb1ddc8312557391857724e994afaf319cbf4398] source 1d3494b55bc6d89a0ec4ca64a52e354337d937a0
git bisect good eb1ddc8312557391857724e994afaf319cbf4398
# good: [fa680e7001153e622599ea485b61a1a48a0bfa25] source ca6c108caaeca5c8176164fcad70ae7a77865892
git bisect good fa680e7001153e622599ea485b61a1a48a0bfa25
# first bad commit: [6158dc3b35af692504c2f49e945df8059eebf092] source 5ffd2c1595d1f67f5e4b14e48188a1f37f1956b5
Comment 3 Commit Notification 2016-11-28 10:26:19 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=787d31a94510ca3de9ce582d7b7402dfca584b23

tdf#104144: Missing dashed border, "break" should be "fallthrough" after all

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2016-11-28 12:17:13 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=df37b833618e1402504fa38316ff635c6ff92b6b&h=libreoffice-5-3

tdf#104144: Missing dashed border, "break" should be "fallthrough" after all

It will be available in 5.3.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2016-11-28 14:36:50 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e2121e396c07111df985cff7b7a47586179cafe5&h=libreoffice-5-2

tdf#104144: Missing dashed border, "break" should be "fallthrough" after all

It will be available in 5.2.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Miklos Vajna 2017-02-10 21:49:48 UTC
*** Bug 104039 has been marked as a duplicate of this bug. ***