tdf#104144: Missing dashed border, "break" should be "fallthrough" after all

...5ffd2c1595d1f67f5e4b14e48188a1f37f1956b5 "Presumably missing break in switch"
apparently decided wrongly in favor of "break" over "fallthrough".

Change-Id: I90372faac84a26514f5dc936e0e393a1ca12effa