filter/source/msfilter/escherex.cxx
@@ -1059,8 +1059,7 @@ void EscherPropertyContainer::CreateLineProperties(
                         AddOpt( ESCHER_Prop_lineDashing, eDash );
                     }
                 }
-                break;
-
+                SAL_FALLTHROUGH;
                 case css::drawing::LineStyle_SOLID :
                 default:
                 {
